Fixed position and spacing of supporting elements

--- a/Broadway/style.css
+++ b/Broadway/style.css
@@ -93,13 +93,16 @@ html, body {
   }
   
   .supporting {
-    padding-top: 80px;
+    padding-top: 100px;
     padding-bottom: 100px;
   }
   
   .supporting .col {
+    display: inline-block;
+    height: 200px;
     font-family: 'Raleway', sans-serif;
     text-align: center;
+    width: 200px;
   }
   
   .supporting img {
